# django-real-state

./: .gitattributes  .gitignore  LICENSE  README.md  generate_fixtures.py  pip-selfcheck.json  pyproject.toml  requirements.txt
src/: db.sqlite3
src/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/accounts/api/: custom_claims.py  serializers.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/btre/: settings.py  urls.py
src/contacts/: admin.py  serializers.py  urls.py  views.py
src/contacts/migrations/: 0001_initial.py  0002_alter_contact_id.py
src/listings/: admin.py  choices.py  models.py  urls.py  views.py
src/listings/api/: serializers.py  urls.py  views.py
src/listings/fixtures/: amenities.json  listings.json
src/listings/management/: __init__.py
src/listings/migrations/: 0001_initial.py  0002_listing_submitted_by_alter_listing_id.py  0003_amenity_listing_energy_rating_listing_featured_and_more.py  0004_listing_deposit_amount_listing_listing_type_and_more.py
src/pages/: urls.py  views.py
src/pages/api/: views.py
src/projects/: admin.py  models.py  urls.py  views.py
src/projects/fixtures/: project_amenities.json  project_features.json  projects.json
src/projects/migrations/: 0001_initial.py  0002_alter_project_gallery_image_1_and_more.py  0003_alter_project_gallery_image_6.py
src/realtors/: admin.py  serializers.py
src/realtors/fixtures/: realtors.json
src/realtors/migrations/: 0001_initial.py  0002_alter_realtor_id.py
src/static/css/: admin.css  custom-colors.css  (+1 more)
src/templates/: base.html
(+31 files in other folders)
